--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -12,33 +12,38 @@
 
     display: flex;
 
-    justify-content: center;
-    align-items: center;
-    
-    padding-top: 40px;
-    padding-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     * {
         font-family: 'Poppins', sans-serif;
         transition: 0.5s;
     }
 
-    .signup-cont {
+    .signup-cont {  
+        * {
+            padding: 5px 20px 5px 20px;
+        }
+
+        flex-grow: 1;
+
         display: grid;
         gap: 30px;
         grid-template-rows: auto auto;
-        margin-right: 30px;
-        margin-left: 30px;
+        align-items: center;
+        justify-items: center;
+
+        padding-bottom: 50px;
 
         .add {
             background-color: $Blue;
             box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
-            padding: 20px;
+            padding: 10px;
             border-radius: 20px;
             color: white;
             display: flex;
             justify-content: center;
-            width: 100%;
+            font-size: 25px;
         }
     }
 }
@@ -47,66 +52,3 @@
     font-weight: bold;
 }
 
-
-@media (max-width: 780px) {
-    .App {
-        background: url('../images/bg-intro-mobile.png') no-repeat center center / cover;
-        background-color: $Red;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        gap: 45px;
-        grid-template-columns: minmax(320px, 550px);
-        grid-template-rows: auto auto;
-        padding: 20px;
-        justify-items: center;
-
-        * {
-            font-family: 'Poppins', sans-serif;
-            transition: 0.5s;
-        }
-
-        .intro {
-            margin-top: 0px;
-            padding-left: 0;
-            padding-right: 0;
-            text-align: center;
-
-            * {
-                margin: 10px;
-            }
-
-            h1 {
-                font-size: 50px;
-                line-height: 50px;
-                color: white;
-            }
-
-            p {
-                font-size: 17px;
-                line-height: 20px;
-                color: white;
-            }
-        }
-
-        .signup-cont {
-            display: grid;
-            gap: 30px;
-            grid-template-columns: minmax(320px, 550px);
-            grid-template-rows: auto auto;
-            margin-right: 30px;
-            margin-left: 30px;
-    
-            .add {
-                background-color: $Blue;
-                box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
-                padding: 20px;
-                border-radius: 20px;
-                color: white;
-                display: flex;
-                justify-content: center;
-                width: 100%;
-            }
-        }
-    }
-}
