--- a/src/SASS/SignupField.scss
+++ b/src/SASS/SignupField.scss
@@ -2,23 +2,65 @@
 
 .signup-field {
     display: grid;
-    grid-template-rows: repeat(5, 1fr auto);
+    grid-template-rows: repeat(7, auto);
+    justify-content: center;
+
     background-color: #fff;
     box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
-    padding: 20px;
+
+    padding-bottom: 10px;  
     border-radius: 15px;
 
-    .inputCont {    
-        position: relative;;
-        .exMark {
-            display: none;
+    .inputCont {
+        position: relative;
+        align-self: center;
+        justify-self: center;
+        margin: 0;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1px;
+
+        .Feran {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 20px;
+            font-weight: bold;
+
+            .radio {
+                height: 18px;
+                width: 18px;
+            }
         }
 
-        .exMark.error {
-            position: absolute;
-            right: 15px;
-            top: 14px;
-            display: block;
+        .label {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+
+            font-size: 20px;
+            font-weight: bold;
+
+            transition: ease 0.5s;
+        }
+
+        .label.hide {
+            height: 0;
+            visibility: hidden;
+        }
+
+        .label.show {
+            height: 58px;
+            visibility: visible;
+        }
+
+        .inputtext {
+            text-align: right;
+            width: 125px;
+            font-size: 20px;
+            font-weight: bold;
+            color: crimson;
         }
 
         input {
@@ -30,41 +72,26 @@
             border-radius: 5px;
         }
 
-        input.error {
-            border: $Red 2px solid;
-        }
-
-        input::placeholder {
-            font-weight: bold;
-        }
-    }
-
-    .warning {
-        margin: 0;
-        font-size: 11px;
-        font-weight: 800;
-        margin-bottom: 15px;
-        margin-top: 2px;
-        justify-self: right;
-        color: $Red;
-        visibility: hidden;
-    }
-
-    .warning.error {
-        visibility: visible;
     }
 
     button {
         background-color: $Green;
         color: white;
-        font-size: 15px;
+        font-size: 25px;
         text-transform: uppercase;
         display: inline-block;
+
         padding: 10px 20px;
+        margin: 15px 0px 15px 0px;
+        
         border: none;
         border-radius: 5px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         transition: transform 0.3s;
+
+        justify-self: center;
+        width: 200px;
+        height: 50px;
     }
 
     button:hover {
@@ -77,15 +104,11 @@
         transform: translateY(2px);
     }
 
-
-    .disclaimer {
-        margin-top: 8px;
-        font-size: 12px;
-        justify-self: center;
-        color: $Grayish-blue;
-
-        a {
-            color: $Red;
-        }
-    }
+    .sum {
+        text-align: center;
+        font-size: 25px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    } 
+    
 }
