--- a/src/SASS/SignupField.scss
+++ b/src/SASS/SignupField.scss
@@ -22,10 +22,12 @@
         gap: 1px;
 
         .Feran {
+            margin-top: 5px;
+            height: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 20px;
+            font-size: 22px;
             font-weight: bold;
 
             .radio {
@@ -35,11 +37,12 @@
         }
 
         .label {
+            height: 30px;
             display: flex;
             align-items: center;
             gap: 10px;
 
-            font-size: 20px;
+            font-size: 22px;
             font-weight: bold;
 
             transition: ease 0.5s;
@@ -51,23 +54,21 @@
         }
 
         .label.show {
-            height: 58px;
+            height: 30px;
             visibility: visible;
         }
 
         .inputtext {
-            text-align: right;
             width: 125px;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: bold;
             color: crimson;
         }
 
         input {
-            width: 100%;
-            height: 40px;
-            padding: 25px;
-            font-weight: 400;
+            height: 30px;
+            padding: 2px;
+            text-align: center;
             border: $Grayish-blue 2px solid;
             border-radius: 5px;
         }
@@ -77,7 +78,7 @@
     button {
         background-color: $Green;
         color: white;
-        font-size: 25px;
+        font-size: 20px;
         text-transform: uppercase;
         display: inline-block;
 
@@ -106,7 +107,7 @@
 
     .sum {
         text-align: center;
-        font-size: 25px;
+        font-size: 20px;
         margin-bottom: 10px;
         font-weight: bold;
     } 
