--- a/src/SASS/SignupField.scss
+++ b/src/SASS/SignupField.scss
@@ -22,7 +22,7 @@
         gap: 1px;
 
         .Feran {
-            margin-top: 5px;
+            margin: 15px 0px 10px 0px;
             height: 20px;
             display: flex;
             justify-content: center;
@@ -46,6 +46,8 @@
             font-weight: bold;
 
             transition: ease 0.5s;
+
+            margin-bottom: 5px;
         }
 
         .label.hide {
