--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -29,7 +29,7 @@
         flex-grow: 1;
 
         display: grid;
-        gap: 25px;
+        gap: 25 px;
         grid-template-rows: auto auto;
         align-items: center;
         justify-items: center;
@@ -52,4 +52,20 @@
 
 .bold {
     font-weight: bold;
+}
+
+
+@media (max-width: 720px) {
+
+    .App {
+        .signup-cont {
+            .add {
+                padding: 5px;
+                border-radius: 20px;
+                font-size: 14px;
+            }
+        }
+    }
+
+
 }
