--- a/src/SASS/SignupField.scss
+++ b/src/SASS/SignupField.scss
@@ -1,15 +1,20 @@
 @import 'base';
 
 .signup-field {
-    display: grid;
-    grid-template-rows: repeat(7, auto);
+    display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 
     background-color: #fff;
     box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
 
-    padding-bottom: 10px;  
+    padding-bottom: 10px;
     border-radius: 15px;
+
+    #Ekht {
+        color: rgb(0, 0, 189);
+    }
 
     .inputCont {
         position: relative;
@@ -51,6 +56,8 @@
         }
 
         .label.hide {
+            margin: 0;
+            padding: 0;
             height: 0;
             visibility: hidden;
         }
@@ -86,7 +93,7 @@
 
         padding: 10px 20px;
         margin: 15px 0px 15px 0px;
-        
+
         border: none;
         border-radius: 5px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -112,6 +119,81 @@
         font-size: 20px;
         margin-bottom: 10px;
         font-weight: bold;
-    } 
+    }
+
+}
+
+
+@media (max-width: 720px) {
+
+    .signup-field {
+
+        padding-bottom: 10px;
+        border-radius: 15px;
+
+        .inputCont {
+            * {
+                margin: 0 !important;
+                padding: 0 !important;
+            }
+
+            .Feran {
+                display: flex;
+                gap: 10px;
+                font-size: 14px;
+
+                .radio {
+                    height: 14px;
+                    width: 14px;
+                }
+            }
+
+            .label {
+                height: 20px;
+                gap: 7px;
+                font-size: 14px;
+                margin-bottom: 5px;
+            }
+
+            .label.hide {
+                margin: 0;
+                padding: 0;
+                height: 0;
+                visibility: hidden;
+            }
     
+            .label.show {
+                height: 20px;
+            }
+
+            .inputtext {
+                height: 18px;
+                width: 100px;
+                font-size: 14px;
+            }
+
+            input {
+                height: 18px;
+            }
+
+        }
+
+        button {
+            font-size: 14px;
+
+            padding: 5px 5px;
+            margin: 5px 0px 5px 0px;
+
+            width: 150px;
+            height: 25px;
+        }
+        
+        .sum {
+            height: 25px;
+            font-size: 14px;
+            margin-bottom: 2px;
+        }
+
+    }
+
 }
