--- a/src/SASS/SignupField.scss
+++ b/src/SASS/SignupField.scss
@@ -21,10 +21,10 @@
         align-self: center;
         justify-self: center;
         margin: 0;
+        gap: 1px;
 
         display: flex;
         flex-direction: column;
-        gap: 1px;
 
         .Feran {
             margin: 15px 0px 10px 0px;
@@ -44,15 +44,21 @@
         .label {
             height: 30px;
             display: flex;
-            align-items: center;
+            justify-content: space-between;
+            align-items: center; 
             gap: 10px;
+            width: 600px;
 
             font-size: 22px;
             font-weight: bold;
 
             transition: ease 0.5s;
 
-            margin-bottom: 5px;
+            p {
+                font-size: 18px;
+                padding: 0 4px 0 4px !important;
+                border: 1px dotted rgb(5, 147, 2);
+            }
         }
 
         .label.hide {
@@ -149,10 +155,14 @@
             }
 
             .label {
+                width: 340px;
                 height: 20px;
                 gap: 7px;
-                font-size: 14px;
+                font-size: 13px;
                 margin-bottom: 5px;
+                p {
+                    font-size: 12px;
+                }
             }
 
             .label.hide {
@@ -167,9 +177,9 @@
             }
 
             .inputtext {
-                height: 18px;
-                width: 100px;
-                font-size: 14px;
+                height: 16px;
+                width: 80px;
+                font-size: 12px;
             }
 
             input {
